修复二维码保失败的bug

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<string>NSPhotoLibraryAddUsageDescription</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>saveErweima</string>
 </dict>
 </plist>
