--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   image_picker: ^0.4.10
   rflutter_alert: ^1.0.2
   image_gallery_saver: ^0.1.2
+  chewie: ^0.8.0
   #path_provider: ^0.4.1
   #permission_handler: ^2.1.1
   #flutter_spinkit: ^3.1.0
