--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,11 +37,13 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.flutterfuqi"
+        applicationId "site.fuqi.www"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        //versionCode flutterVersionCode.toInteger()
+        //versionName flutterVersionName
+        versionCode 3
+        versionName "1.3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
