--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   chewie: ^0.8.0
   cached_network_image: ^0.5.1
   url_launcher: ^5.0.2
+  flukit: ^1.0.0
   #path_provider: ^0.4.1
   #permission_handler: ^2.1.1
   #flutter_spinkit: ^3.1.0
